// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`加粗、强调渲染测试 加粗、强调的组合 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <em>
        <strong>
          strong emph
        </strong>
      </em>
      <br
        class="container wrapper non-select"
      />
      <em>
        <strong>
          strong
        </strong>
         in emph
      </em>
      <br
        class="container wrapper non-select"
      />
      <strong>
        <em>
          emph
        </em>
         in strong
      </strong>
      <br
        class="container wrapper non-select"
      />
      <strong>
        in strong 
        <em>
          emph
        </em>
      </strong>
      <br
        class="container wrapper non-select"
      />
      <em>
        in emph 
        <strong>
          strong
        </strong>
      </em>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 加粗前后有中文符号，可以正确识别为加粗 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        <strong>
          123123)
        </strong>
        ：456456
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 加粗和强调 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <strong>
        加粗内容
      </strong>
      后缀
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <em
        style="margin-right: 2px;"
      >
        强调内容
      </em>
      后缀
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 加粗语法自动修复: 加粗自动修复 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <strong>
        后缀
      </strong>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 强调文字后缀如果是中文则间隔字符 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <em
        style="margin-right: 6px;"
      >
        强调内容
      </em>
      后缀
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 强调文字后缀如果非中文则不间隔 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <em>
        强调内容
      </em>
       后缀
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 强调语法自动修复: 强调自动修复 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <em>
        后缀
      </em>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`加粗、强调渲染测试 设置 spacingAfterChineseEm 为 false 则不间隔 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀
      <em>
        强调内容
      </em>
      后缀
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
